--- a/travel-planner-app/src/client/styles/style.scss
+++ b/travel-planner-app/src/client/styles/style.scss
@@ -1,111 +1,125 @@
-body{
-    background: #fffff8;
+body {
+    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+
+    button {
+        cursor: pointer;
+        padding: 4px 10px;
+        border: 2px solid;
+
+        &.save {
+            border-color: black;
+            background-color: white;
+            margin-right: 10px;
+
+            &:hover {
+                background-color: black;
+                color: white;
+            }
+        }
+
+        &.remove {
+            border-color: white;
+            background-color: transparent;
+
+            &:hover {
+                background-color: white;
+            }
+        }
+    }
+
+    // header
+    .page-header {
+        margin: 40px 20px 10px;
+        font-weight: bold;
+
+        div {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 30px;
+
+            button {
+                border-color: grey;
+                background-color: white;
+                font-weight: bold;
+                border-radius: 20px;
+
+                &:hover {
+                    background-color: grey;
+                    color: white;
+                }
+            }
+        }
+    }
+
+    // form
+    .form {
+        display: grid;
+        justify-items: center;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1.5fr;
+        background: #e5e3e3;
+        font-weight: bold;
+        gap: 10px;
+        padding: 50px 0;
+        margin-bottom: 10px;
+
+        input {
+            border: none;
+            outline:0;
+            font-weight: bold;
+            font-size: medium;
+        }
+    }
+
+    // cards
+    .card-holder {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-rows: minmax(400px, auto);
+
+        .card-item {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            background: #ffedee;
+            margin: 0 0 40px;
+            padding: 25px 0;
+
+            img {
+                max-width: 100%;
+                height: auto;
+            }
+
+            .info {
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+                padding: 30px;
+
+                header {
+                    font-weight: bold;
+                    line-height: 1.5em;
+                }
+
+                .detail {
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    grid-template-rows: 4fr 2fr 1.5fr 1fr;
+
+                    .weather {
+                        font-size: small;
+                    }
+                }
+            }
+        }
+    }
 }
 
-#app{
-    display: grid;
-    grid-auto-rows: minmax(150px, auto);
-    /* grid-template-columns:  */
-    height:100vh;
-    background: #f23557;
-    color: #f0d43a;
-    justify-content: center;
-    grid-gap: 1em;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-}
 
-.holder{
 
-}
 
-.entry{
-    background: rgba(59, 74, 107, .4);
-}
 
-#entryHolder{
 
-}
 
-#date{
 
-}
-
-#temp{
-
-}
-
-#content{
-
-}
-
-.headline {
-
-}
-.title{
-
-}
-
-/*  Basic Styling To Override Default For Basic HTML Elements */
-label{
-    display:block;
-    font-size: 27px;
-}
-
-input{
-    display:block;
-    height: 60px;
-    width: 320px;
-    background:#22b2da;
-    color: #f0d43a;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-    border: none;
-}
-
-button{
-    width: 400px;
-    height: 100px;
-    background: #3b4a6b;
-    color: #f0d43a;
-    font-size: 26px;
-    font-family: 'Oswald', sans-serif;
-    border: none;
-    box-shadow: 2px 4px 5px #444;
-}
-h1{
-    font-size: 36px;
-}
-
-textarea{
-    background:#22b2da;
-    color: #f0d43a;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-}
-/* Reset style for HTML element on active to have no border*/
-input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-    outline: none;
-}
-/* Style for Placeholder Text*/
-::placeholder { /* Firefox, Chrome, Opera */ 
-    color: #f0d43a; 
-    font-family: 'Oswald', sans-serif;
-
-} 
-  
-:-ms-input-placeholder { /* Internet Explorer 10-11 */ 
-    color: #f0d43a; 
-    font-family: 'Oswald', sans-serif;
-
-} 
-  
-::-ms-input-placeholder { /* Microsoft Edge */ 
-    color: #f0d43a; 
-    font-family: 'Oswald', sans-serif;
-
-} 
