--- a/travel-planner-app/src/client/views/index.html
+++ b/travel-planner-app/src/client/views/index.html
@@ -1,33 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Weather Journal</title>
-<link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-</head>
- <body>
-<div id = "app">
-  <div class ="holder headline">
-    Weather Journal App
-  </div>
-  <div class ="holder zip">
-    <label for="zip">Enter Zipcode here</label>
-    <input type="text" id="zip" placeholder="enter zip code here">
-  </div>
-  <div class ="holder feel">
-    <label for="feelings">How are you feeling today?</label>
-    <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
-    <button id="generate" type = "submit"> Generate </button>
-  </div>
-  <div class ="holder entry">
-    <div class = "title">Most Recent Entry</div>
-   <div id = "entryHolder">
-    <div id = "date"></div> 
-   <div id = "temp"></div>
-   <div id = "content"></div>
-  </div>
-  </div>
-  </div>
+  <head>
+    <meta charset="UTF-8">
+    <title>Travel Planner</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <header class="page-header">
+      <h1>Travel Planner</h1>
+      <div>
+        <span>My trips:</span>
+        <button>+ add trip</button>
+      </div>
+    </header>
 
-</body>
+    <!-- form -->
+    <div class="form">
+      <div>
+        <label for="zip">My trip to:</label>
+        <input type="text" id="zip" placeholder="Enter Location">
+      </div>
+      <div>
+        <label for="feelings">Departing:</label>
+        <input type="text" id="feelings" placeholder="MM/DD/YYYY"></input>
+      </div>
+
+      <!-- button -->
+      <div>
+        <button class="save">save trip</button>
+        <button class="remove">remove trip</button>
+      </div>
+    </div>
+
+    <main class="card-holder">
+      <!-- card item -->
+      <article class="card-item">
+        <img src="https://pixabay.com/get/gf2abe42191ce9caf8b8638a489fae227e0a6b8117ee8b5fd2ccc5bb85af8f408f86256c0d070e86a5aa4f0a70d51b245_640.jpg"/>
+
+        <!-- info -->
+        <main class="info">
+          <!-- summary -->
+          <header>
+            <div>
+              <span>My trip to:</span>
+              <span class="place">Paris, France</span>
+            </div>
+            <div>
+              <span>Departing:</span>
+              <time id="date">02/12/2020</time>
+            </div>
+          </header>
+
+          <!-- button -->
+          <div>
+            <button class="save">save trip</button>
+            <button class="remove">remove trip</button>
+          </div>
+
+          <!-- detail -->
+          <section class="detail">
+            <div><span class="place">Paris, France</span> is <span id="day">220</span> days away</div>
+            <span>Typical weather for then is:</span>
+            <div class="weather">High <span id="high">-46</span>, Low <span id="low">-35</span></div>
+            <span class="weather" id="weather-detail">Mostly cloudy throughout the day.</span>
+          </section>
+        </main>
+      </article>
+    </main>
+  </body>
 </html>
