--- a/travel-planner-app/src/client/styles/style.scss
+++ b/travel-planner-app/src/client/styles/style.scss
@@ -1,37 +1,14 @@
+$medium: 600px;
+$large: 900px;
+$font: -apple-system, BlinkMacSystemFont, sans-serif;
+
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-
-    button {
-        cursor: pointer;
-        padding: 4px 10px;
-        border: 2px solid;
-
-        &.save {
-            border-color: black;
-            background-color: white;
-            margin-right: 10px;
-
-            &:hover {
-                background-color: black;
-                color: white;
-            }
-        }
-
-        &.remove {
-            border-color: white;
-            background-color: transparent;
-
-            &:hover {
-                background-color: white;
-            }
-        }
-    }
+    margin: 40px 20%;
+    font-family: $font;
 
     // header
     .page-header {
-        margin: 40px 20px 10px;
-        font-weight: bold;
+        margin: 10px 20px;
 
         div {
             display: flex;
@@ -54,21 +31,22 @@ body {
 
     // form
     .form {
-        display: grid;
-        justify-items: center;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1.5fr;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         background: #e5e3e3;
         font-weight: bold;
-        gap: 10px;
-        padding: 50px 0;
+        gap: 20px;
         margin-bottom: 10px;
+        padding: 50px 20px;
 
-        input {
-            border: none;
-            outline:0;
-            font-weight: bold;
-            font-size: medium;
+        @media screen and (max-width: $large) {
+            .input-area {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 5px;
+            }
         }
     }
 
@@ -76,15 +54,37 @@ body {
     .card-holder {
         display: grid;
         grid-template-columns: 1fr;
-        grid-auto-rows: minmax(400px, auto);
+        grid-auto-rows: minmax(300px, auto);
+        gap: 10px;
+
+        @media screen and (max-width: $large) {
+            .card-item {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+
+                .info {
+                    padding: 20px;
+                }
+
+                @media screen and (min-width: $medium) {
+                    align-items: center;
+                }
+            }
+        }
+
+        @media screen and (min-width: $large) {
+            .card-item {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: 1fr;
+                justify-items: center;
+                padding: 30px 20px;
+            }
+        }
 
         .card-item {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
             background: #ffedee;
-            margin: 0 0 40px;
-            padding: 25px 0;
 
             img {
                 max-width: 100%;
@@ -95,31 +95,65 @@ body {
                 display: flex;
                 flex-direction: column;
                 gap: 30px;
-                padding: 30px;
+                line-height: 1.5em;
 
-                header {
-                    font-weight: bold;
-                    line-height: 1.5em;
-                }
-
-                .detail {
-                    display: grid;
-                    grid-template-columns: 1fr;
-                    grid-template-rows: 4fr 2fr 1.5fr 1fr;
-
-                    .weather {
-                        font-size: small;
-                    }
+                .weather {
+                    font-size: small;
                 }
             }
         }
     }
 }
 
+// Common styles
+header {
+    font-weight: bold;
+}
 
+button {
+    cursor: pointer;
+    padding: 4px 10px;
+    border: 2px solid;
+    border-radius: 5px;
 
+    &.left-btn {
+        border-color: black;
+        background-color: white;
+        margin-right: 10px;
 
+        &:hover {
+            background-color: black;
+            color: white;
+        }
+    }
 
+    &.right-btn {
+        border-color: white;
+        background-color: transparent;
 
+        &:hover {
+            background-color: white;
+        }
+    }
+}
 
+input {
+    width: 200px;
+    border: none;
+    outline:0;
+    font-weight: bold;
+    font-size: medium;
+    padding: 5px;
+    border-radius: 5px;
+    font-family: $font;
 
+    &[type=date] {
+        &:invalid {
+            color: gray;
+        }
+
+        &:valid {
+            color: black;
+        }
+    }
+}
