feat: Integrate APIs

--- a/travel-planner-app/src/client/views/index.html
+++ b/travel-planner-app/src/client/views/index.html
@@ -34,7 +34,7 @@
     <main class="card-holder">
       <!-- card item -->
       <article class="card-item">
-        <img alt="Destination" src="https://pixabay.com/get/gf2abe42191ce9caf8b8638a489fae227e0a6b8117ee8b5fd2ccc5bb85af8f408f86256c0d070e86a5aa4f0a70d51b245_640.jpg">
+        <img alt="Destination" src="">
 
         <!-- info -->
         <div class="info">
@@ -42,11 +42,11 @@
           <header>
             <div>
               <span>My trip to:</span>
-              <span class="place">Paris, France</span>
+              <span class="place"></span>
             </div>
             <div>
               <span>Departing:</span>
-              <time id="date">02/12/2020</time>
+              <time id="date"></time>
             </div>
           </header>
 
@@ -57,11 +57,11 @@
           </div>
 
           <!-- detail -->
-          <div><span class="place">Paris, France</span> is <span id="day">220</span> days away</div>
+          <div><span class="place"></span> is <span id="day"></span> away</div>
           <div>
             <span>Typical weather for then is:</span>
-            <div class="weather">High <span id="high">-46</span>, Low <span id="low">-35</span></div>
-            <span class="weather" id="weather-detail">Mostly cloudy throughout the day.</span>
+            <div class="weather" id="temp"></div>
+            <span class="weather" id="detail"></span>
           </div>
         </div>
       </article>
