--- a/travel-planner-app/src/client/styles/style.scss
+++ b/travel-planner-app/src/client/styles/style.scss
@@ -52,7 +52,7 @@ body {
 
     // cards
     .card-holder {
-        display: none;
+        display: grid;
         grid-template-columns: 1fr;
         grid-auto-rows: minmax(300px, auto);
         gap: 10px;
